# genSQL

./: .gitignore  COPYRIGHT  Makefile  README.md  broken.json  create_entries.py  fast_shuffle.c  foo.c  foo.py  full.json  gensql.py  last_names.txt  only_phone.json  pyproject.toml  run.sh  skeleton.json  test.json  threader.c  threader.py
content/: NAMES_NOTICE.txt  WORDS_NOTICE.TXT  cities_countries.csv  cities_countries.txt  code_city.csv  country_code.csv  country_code_city.csv  country_codes.txt  fips_code.tsv  first_names.txt  iso-3166-1.tsv  iso-3166-2.tsv  last_names.txt  lorem_ipsum.txt  state_code.csv  zip_code.csv
db/: benchmark.py  gensql.db  table_creation.py
exceptions/: exceptions.py
gensql/: generator.py  runner.py  validator.py
gensql/generators/: base.py  email.py  geo.py  ids.py  word.py
gensql/utils/: connections.py  constants.py  logger.py  utilities.py
gensql/utils/libs/src/: char_shuffle.c  fast_mod.c
schema_inputs/: broken.json  full.json  skeleton.json  user_no_phone.json  user_phone.json  users.json  uuid_bin_pk.json  uuid_no_pk.json  uuid_pk.json  zaps.json
tests/: test_runner.py  test_schema.py
utilities/: constants.py  logger.py  utilities.py
